--- a/#src/html/page-block/header.html
+++ b/#src/html/page-block/header.html
@@ -5,10 +5,10 @@
 				<nav class="top-header__menu menu">
 					<ul class="menu__grid-list">
 						<li><a class="menu__link" href="">Бренды</a></li>
-						<li><a class="menu__link" href="">Распродажа</a></li>
-						<li><a class="menu__link" href="">Доставка и Сборка</a></li>
+						<li><a class="menu__link" href="catalog.html">Распродажа</a></li>
+						<li><a class="menu__link" href="product.html">Доставка и Сборка</a></li>
 						<li><a class="menu__link" href="">Гарантия</a></li>
-						<li><a class="menu__link" href="">Оплата</a></li>
+						<li><a class="menu__link" href="cart.html">Оплата</a></li>
 						<li><a class="menu__link" href="">Контакты</a></li>
 					</ul>
 				</nav>
@@ -25,7 +25,6 @@
 					<div class="contacts-header__column">
 						<a href="tel:84991234567">
 							<div class="contacts-header__icon">
-
 							</div>
 						</a>
 					</div>
@@ -86,7 +85,7 @@
 						</a>
 					</div>
 					<div class="info-header__column info-header__column_basket">
-						<a class="info-header__orders icon-cart-circle" href="">
+						<a class="info-header__orders icon-cart-circle" href="cart.html">
 							<span>12</span>
 						</a>
 					</div>
