--- a/#src/html/page-block/page-sidebar.html
+++ b/#src/html/page-block/page-sidebar.html
@@ -1,9 +1,7 @@
 <nav class="page__menu menu-page _slideToggle">
-	<div class="menu-page__title">
-		<a href="catalog.html">
-			<h1>Каталог товаров</h1>
-		</a>
-		<div class="side-wrap _trigger-click">
+	<div class="menu-page__title _trigger-click">
+		<h1>Каталог товаров</h1>
+		<div class="side-wrap">
 			<div class="side-menu">
 				<span></span>
 				<span></span>
