--- a/#src/html/page-block/page-product.html
+++ b/#src/html/page-block/page-product.html
@@ -24,16 +24,16 @@
 			</div>
 			<div class="content-product__thumb thumb-slide swiper _swiper" thumbsSlider="">
 				<div class="thumb-slide__cart">
-					<img src="../img/product/p_02.jpg" alt="Картинка">
+					<img src="img/product/p_02.jpg" alt="Картинка">
 				</div>
 				<div class="thumb-slide__cart">
-					<img src="../img/product/p_03.jpg" alt="Картинка">
+					<img src="img/product/p_03.jpg" alt="Картинка">
 				</div>
 				<div class="thumb-slide__cart">
-					<img src="../img/product/p_04.jpg" alt="Картинка">
+					<img src="img/product/p_04.jpg" alt="Картинка">
 				</div>
 				<div class="thumb-slide__cart">
-					<img src="../img/product/p_05.jpg" alt="Картинка">
+					<img src="img/product/p_05.jpg" alt="Картинка">
 				</div>
 			</div>
 		</div>
