--- a/#src/html/page-block/page-product.html
+++ b/#src/html/page-block/page-product.html
@@ -7,16 +7,16 @@
 			<div class="content-product__slide product-slide">
 				<div class="product-slide__slide swiper _swiper">
 					<div class="product-slide__cart swiper-slide">
-						<img src="../img/product/p_01.jpg" alt="Картинка">
+						<img src="img/product/p_01.jpg" alt="Картинка">
 					</div>
 					<div class="product-slide__cart swiper-slide">
-						<img src="../img/product/p_03.jpg" alt="Картинка">
+						<img src="img/product/p_03.jpg" alt="Картинка">
 					</div>
 					<div class="product-slide__cart swiper-slide">
-						<img src="../img/product/p_04.jpg" alt="Картинка">
+						<img src="img/product/p_04.jpg" alt="Картинка">
 					</div>
 					<div class="product-slide__cart swiper-slide">
-						<img src="../img/product/p_05.jpg" alt="Картинка">
+						<img src="img/product/p_05.jpg" alt="Картинка">
 					</div>
 				</div>
 				<div class="product-slide__prew icon-angle-double-left"></div>
