--- a/#src/html/page-block/page-product.html
+++ b/#src/html/page-block/page-product.html
@@ -44,18 +44,18 @@
 						<button class="icon-compare" type="button">Сравнить</button>
 						<span class="info-product__status">в наличии</span>
 					</section>
-					<section class="info-product__actions actions-product">
+					<section class="info-product__actions actions-product" data-action>
 						<div class="actions-product__column">
 							<div class="actions-product__old-price">
-								<div>64 990 <i class="icon-ruble"></i></div>
+								<p>64 990 <i class="icon-ruble"></i></p>
 							</div>
-							<div class="actions-product__new-price">
-								<div>64 990 <i class="icon-ruble"></i></div>
+							<div class="actions-product__new-price product-prices">
+								<p>64 990</p><i class="icon-ruble"></i>
 							</div>
 						</div>
 						<div class="actions-product__column">
 							<div class="actions-product__quantity quantity">
-								<div class="quantity__buttom quantity-remove _arrow _arrow_prev"></div>
+								<div class="quantity__buttom quantity-remove _arrow _arrow_prev _disabled"></div>
 								<div class="quantity__input">
 									<input class="input" autocomplete="off" data-error="Ошибка" name="form[]" value="1">
 								</div>
@@ -82,6 +82,92 @@
 			</div>
 		</div>
 	</div>
+
+
+	<!-- <div class="product-page__content content-product">
+		<div class="content-product__column">
+			<div class="content-product__slide product-slide">
+				<div class="product-slide__slide swiper _swiper">
+					<div class="product-slide__cart swiper-slide">
+						<img src="img/product/p_01.jpg" alt="Картинка">
+					</div>
+					<div class="product-slide__cart swiper-slide">
+						<img src="img/product/p_03.jpg" alt="Картинка">
+					</div>
+					<div class="product-slide__cart swiper-slide">
+						<img src="img/product/p_04.jpg" alt="Картинка">
+					</div>
+					<div class="product-slide__cart swiper-slide">
+						<img src="img/product/p_05.jpg" alt="Картинка">
+					</div>
+				</div>
+				<div class="product-slide__prew icon-angle-double-left"></div>
+				<div class="product-slide__next icon-angle-double-right"></div>
+			</div>
+			<div class="content-product__thumb thumb-slide swiper _swiper" thumbsSlider="">
+				<div class="thumb-slide__cart">
+					<img src="img/product/p_02.jpg" alt="Картинка">
+				</div>
+				<div class="thumb-slide__cart">
+					<img src="img/product/p_03.jpg" alt="Картинка">
+				</div>
+				<div class="thumb-slide__cart">
+					<img src="img/product/p_04.jpg" alt="Картинка">
+				</div>
+				<div class="thumb-slide__cart">
+					<img src="img/product/p_05.jpg" alt="Картинка">
+				</div>
+			</div>
+		</div>
+		<div class="content-product__column">
+			<div class="product-page__info info-product">
+				<div class="info-product__body">
+					<section class="info-product__compare">
+						<button class="icon-compare" type="button">Сравнить</button>
+						<span class="info-product__status">в наличии</span>
+					</section>
+					<section class="info-product__actions actions-product" data-action>
+						<div class="actions-product__column">
+							<div class="actions-product__old-price">
+								<p>64 990 <i class="icon-ruble"></i></p>
+							</div>
+							<div class="actions-product__new-price product-prices">
+								<p>64 990</p><i class="icon-ruble"></i>
+							</div>
+						</div>
+						<div class="actions-product__column">
+							<div class="actions-product__quantity quantity">
+								<div class="quantity__buttom quantity-remove _arrow _arrow_prev _disabled"></div>
+								<div class="quantity__input">
+									<input class="input" autocomplete="off" data-error="Ошибка" name="form[]" value="1">
+								</div>
+								<div class="quantity__buttom quantity-add _arrow _arrow_next"></div>
+							</div>
+						</div>
+						<div class="actions-product__column">
+							<div class="cart-buttom">
+								<button class="cart-buttom__buttom" type="submit">
+									<span>В корзину</span><i class="icon-cart-circle"></i>
+								</button>
+							</div>
+						</div>
+					</section>
+					<section class="info-product__service product-service">
+						<div class="product-service__title">В стоимость товара включено:</div>
+						<div class="product-service__item">
+							<div class="product-service__column"><a href=""><span>Бесплатная<br> сборка</span></a></div>
+							<div class="product-service__column"><a href=""><span>Бесплатная <br>доставка</span></a></div>
+							<div class="product-service__column"><a href=""><span>Гарантия</span></a></div>
+						</div>
+					</section>
+				</div>
+			</div>
+		</div>
+	</div> -->
+
+
+
+
 	<div class="product-page__description description">
 		<div class="description__tabs tab-descriptions">
 			<div class="tab-descriptions__description _tablinks _active">Описание</div>
