--- a/#src/product.html
+++ b/#src/product.html
@@ -18,7 +18,7 @@
 						<!-----------------Checkbox---------------------->
 						@@include("html/page-block/page-search.html")
 						<!-----------------Breadcrumbs--------------------->
-						<nav class="page__breadcrumbs breadcrumbs">
+						<nav class="breadcrumbs">
 							<ul class="breadcrumbs__list">
 								<li><a href="index.html" class="breadcrumbs__link">Главная</a></li>
 								<li class="icon-angle-double-right"><span class="breadcrumbs__item">Список товаров</span></li>
