--- a/#src/cart.html
+++ b/#src/cart.html
@@ -13,20 +13,18 @@
 					<aside class="page__sidebar">
 						@@include("html/page-block/page-sidebar.html")
 						@@include("html/page-block/page-news.html")
-						<div class="page__cart ">
-						</div>
 					</aside>
-					<div class="page__main-content">
+					<div class="page__main-content cart">
 						<!-----------------SerchCheckbox------------------->
 						@@include("html/page-block/page-search.html")
-						<nav class="page__breadcrumbs breadcrumbs">
+						<nav class="breadcrumbs">
 							<ul class="breadcrumbs__list">
 								<li><a href="index.html" class="breadcrumbs__link">Главная</a></li>
 								<li class="icon-angle-double-right"><span class="breadcrumbs__item">Корзина</span></li>
 							</ul>
 						</nav>
 						<!-----------------Page Cart------------------->
-						<div class="page__cart cart">
+						<div class="page__cart cart-page">
 							@@include("html/page-block/page-cart.html")
 						</div>
 					</div>
