--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -22,7 +22,7 @@
 						<nav class="breadcrumbs">
 							<ul class="breadcrumbs__list">
 								<li><a href="index.html" class="breadcrumbs__link">Главная</a></li>
-								<li class="icon-angle-double-right"><span class="breadcrumbs__item">Каталог товара</span></li>
+								<li class="icon-angle-double-right"><span class="breadcrumbs__item">Каталог товаров</span></li>
 							</ul>
 						</nav>
 						<!------------------Catalog----------------------->
