--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include("layout/head-catalog.html",{"title":"Каталог товара"})
+@@include("html/components/head-catalog.html",{
+"title":"Каталог товара"})
 
 <body>
-	@@include('partials/loading.html')
+	@@include('html/components/loading_2.html')
 	<div class="wrapper">
-		@@include("partials/header.html")
+		@@include("html/page-block/header.html")
 		<main class="page">
 			<div class="page__container _container">
 				<div class="page__content">
 					<aside class="page__sidebar">
-						@@include("page-blocks/page-sidebar.html")
+						@@include("html/page-block/page-sidebar.html")
 						<form action="#" class="page__filter filter">
-							@@include("page-blocks/page-filter.html")
+							@@include("html/page-block/page-filter.html")
 						</form>
 					</aside>
 					<div class="page__main-content">
 						<!-----------------SerchCheckbox------------------->
-						@@include("page-blocks/page-search.html")
+						@@include("html/page-block/page-search.html")
 						<nav class="breadcrumbs">
 							<ul class="breadcrumbs__list">
 								<li><a href="index.html" class="breadcrumbs__link">Главная</a></li>
@@ -25,15 +26,15 @@
 							</ul>
 						</nav>
 						<!------------------Catalog----------------------->
-						@@include("page-blocks/page-catalog.html")
+						@@include("html/page-block/page-catalog.html")
 					</div>
 				</div>
 			</div>
 			<section class="page__info block-info">
-				@@include("page-blocks/page-info.html")
+				@@include("html/page-block/page-info.html")
 			</section>
 		</main>
-		@@include("partials/footer.html")
+		@@include("html/page-block/footer.html")
 	</div>
 </body>
 
