--- a/#src/html/page-block/footer.html
+++ b/#src/html/page-block/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<main class="footer">
 	<div class="footer__content _container">
 		<div class="footer__column content-footer">
 			<div class="content-footer__inner">
@@ -71,4 +71,4 @@
 
 		</div>
 	</div>
-	</d>
+</main>
