--- a/#src/index.html
+++ b/#src/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('layout/head.html",{"title":"Главная"})
+@@include("html/components/head.html",{
+"title":"Главная"})
 
 <body>
-	@@include('partials/loading.html')
+	@@include('html/components/loading_2.html')
 	<div class="wrapper">
-		@@include("partials/header.html")
+		@@include("html/page-block/header.html")
 		<main class="page">
 			<div class="page__container">
 				<div class="page__content">
 					<aside class="page__sidebar">
-						@@include("page-blocks/page-sidebar.html")
-						@@include("page-blocks/page-news.html")
+						@@include("html/page-block/page-sidebar.html")
+						@@include("html/page-block/page-news.html")
 					</aside>
 					<div class="page__main-content">
 						<!-----------------Checkbox---------------------->
-						@@include("page-blocks/page-search.html")
+						@@include("html/page-block/page-search.html")
 						<!------------------Slider----------------------->
-						@@include("page-blocks/page-mainslide.html")
+						@@include("html/page-block/page-mainslide.html")
 						<!------------------Products----------------------->
-						@@include("page-blocks/page-products.html")
+						@@include("html/page-block/page-products.html")
 					</div>
 				</div>
 			</div>
 			<div class="page__brands brands-slide">
-				@@include("page-blocks/page-brands.html")
+				@@include("html/page-block/page-brands.html")
 			</div>
 			<section class="page__text text-block">
-				@@include("page-blocks/page-text.html")
+				@@include("html/page-block/page-text.html")
 			</section>
 			<section class="page__info block-info">
-				@@include("page-blocks/page-info.html")
+				@@include("html/page-block/page-info.html")
 			</section>
 		</main>
-		@@include("partials/footer.html")
+		@@include("html/page-block/footer.html")
 	</div>
-</body>
 </body>
 
 </html>
