--- a/#src/html/cart.html
+++ b/#src/html/cart.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include("components/head-cart.html",{
+@@include("layouts/head-cart.html",{
 "title":"Корзина"})
 
 <body>
 	@@include('partials/loading.html')
 	<div class="wrapper">
-		@@include("pages/header.html")
+		@@include("partials/header.html")
 		<main class="page">
 			<div class="page__container _container">
 				<div class="page__content">
@@ -31,10 +31,10 @@
 				</div>
 			</div>
 			<section class="page__info block-info">
-				@@include("pages/page-info.html")
+				@@include("partials/page-info.html")
 			</section>
 		</main>
-		@@include("pages/footer.html")
+		@@include("partials/footer.html")
 	</div>
 </body>
 
